[gd_scene load_steps=9 format=3 uid="uid://dw1uy1nii005w"]

[ext_resource type="Script" path="res://magical_scale.gd" id="1_xoq1p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_x2asx"]
rough = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m0b0q"]
height = 0.1
radius = 0.8

[sub_resource type="CylinderMesh" id="CylinderMesh_8kx8d"]
top_radius = 0.8
bottom_radius = 0.8
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7nirk"]
albedo_color = Color(0.261113, 0.261113, 0.261113, 1)
metallic = 0.7
roughness = 0.3

[sub_resource type="TorusMesh" id="TorusMesh_c87io"]
inner_radius = 0.75
outer_radius = 0.85
rings = 32

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2fx2w"]
transparency = 1
albedo_color = Color(0, 1, 1, 0.188235)
emission_enabled = true
emission = Color(0, 1, 1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_km0es"]
height = 1.0
radius = 0.8

[node name="MagicalScale" type="Node3D"]
script = ExtResource("1_xoq1p")

[node name="Platform" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_x2asx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform"]
shape = SubResource("CylinderShape3D_m0b0q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform"]
mesh = SubResource("CylinderMesh_8kx8d")
skeleton = NodePath("../CollisionShape3D")
surface_material_override/0 = SubResource("StandardMaterial3D_7nirk")

[node name="RuneRing" type="MeshInstance3D" parent="Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("TorusMesh_c87io")
surface_material_override/0 = SubResource("StandardMaterial3D_2fx2w")

[node name="WeightDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Label3D" type="Label3D" parent="WeightDisplay"]
billboard = 1
text = "0.0 kg"
font_size = 20

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CylinderShape3D_km0es")
